--- a/environment.yml
+++ b/environment.yml
@@ -1,5 +1,8 @@
 name: adsdb
 
+channels:
+  - conda-forge
+
 dependencies:
   - python=3.9.*
   - numpy
@@ -9,7 +12,12 @@ dependencies:
   - psycopg2
   - sqlalchemy
   - scipy
-  - pandas_profiling
+  - pandas-profiling
+  - scikit-learn
+  - plotly
+  - ipykernel
+  - pip
+
   - pip:
     - wbdata
     - pyenchant
